--- a/index.html
+++ b/index.html
@@ -2108,7 +2108,7 @@
         const routes = {
           augiA20Il: {
             elements: {},
-            page: Framer.lazy(() => import("main.mjs")),
+            page: Framer.lazy(() => import("https://framerusercontent.com/sites/76iY6VaPzrc4ez5hml1rjq/BVsLl2Z4gkN_UWQPC8W8fHRz_fXJQQfZuYugjOcDeFI.7Q6VHXH5.mjs")),
             path: "/"
           },
           iZa3hdSsR: {
